--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,2 @@
-build/tortin/github-btn.html
-build/tortin/index.html
-build/tortin/package.json
-build/tortin/img/screenshot.png
-build/tortin/script/data-markdown.js
-build/tortin/style/style.css
-node_modules/.bin/grunt-dust
-node_modules/.bin/karma
-node_modules/.bin/r.js
-node_modules/grunt-contrib-clean/node_modules/.bin/rimraf
-node_modules/grunt-contrib-coffee/node_modules/.bin/cake
-node_modules/grunt-contrib-coffee/node_modules/.bin/coffee
-node_modules/grunt-contrib-coffee/node_modules/chalk/node_modules/.bin/strip-ansi
-node_modules/grunt-contrib-concat/node_modules/chalk/node_modules/.bin/strip-ansi
-node_modules/grunt-contrib-cssmin/node_modules/.bin/cleancss
-node_modules/grunt-contrib-less/node_modules/.bin/lessc
-node_modules/grunt-contrib-less/node_modules/less/node_modules/.bin/cleancss
-node_modules/grunt-contrib-less/node_modules/less/node_modules/request/node_modules/.bin/har-validator
-node_modules/grunt-contrib-less/node_modules/less/node_modules/request/node_modules/.bin/uuid
-node_modules/grunt-contrib-uglify/node_modules/.bin/uglifyjs
-node_modules/grunt-contrib-watch/node_modules/.bin/tiny-lr
-node_modules/grunt-contrib-watch/node_modules/tiny-lr/node_modules/noptify/node_modules/.bin/nopt
-node_modules/grunt-dust/node_modules/.bin/cake
-node_modules/grunt-dust/node_modules/.bin/coffee
-node_modules/grunt-dust/node_modules/.bin/dustc
-node_modules/grunt-dust/node_modules/.bin/semver
-node_modules/grunt-shell/node_modules/chalk/node_modules/.bin/strip-ansi
-node_modules/grunt-vtex/node_modules/connect-http-please/node_modules/.bin/cake
-node_modules/grunt-vtex/node_modules/connect-http-please/node_modules/.bin/coffee
-node_modules/grunt-vtex/node_modules/connect-tryfiles/node_modules/.bin/cake
-node_modules/grunt-vtex/node_modules/connect-tryfiles/node_modules/.bin/coffee
-node_modules/grunt/node_modules/.bin/cake
-node_modules/grunt/node_modules/.bin/coffee
-node_modules/grunt/node_modules/.bin/js-yaml
-node_modules/grunt/node_modules/.bin/nopt
-node_modules/grunt/node_modules/.bin/rimraf
-node_modules/grunt/node_modules/.bin/which
-node_modules/grunt/node_modules/js-yaml/node_modules/.bin/esparse
-node_modules/grunt/node_modules/js-yaml/node_modules/.bin/esvalidate
-node_modules/karma-chrome-launcher/node_modules/.bin/which
-node_modules/karma-coffee-preprocessor/node_modules/.bin/cake
-node_modules/karma-coffee-preprocessor/node_modules/.bin/coffee
-node_modules/karma-phantomjs-launcher/node_modules/.bin/phantomjs
-node_modules/karma-phantomjs-launcher/node_modules/phantomjs/node_modules/.bin/which
-node_modules/karma-phantomjs-launcher/node_modules/phantomjs/node_modules/fs-extra/node_modules/.bin/rimraf
-node_modules/karma-phantomjs-launcher/node_modules/phantomjs/node_modules/npmconf/node_modules/.bin/mkdirp
-node_modules/karma-phantomjs-launcher/node_modules/phantomjs/node_modules/npmconf/node_modules/.bin/nopt
-node_modules/karma-phantomjs-launcher/node_modules/phantomjs/node_modules/npmconf/node_modules/.bin/semver
-node_modules/karma-phantomjs-launcher/node_modules/phantomjs/node_modules/request/node_modules/.bin/uuid
-node_modules/karma/node_modules/.bin/cake
-node_modules/karma/node_modules/.bin/coffee
-node_modules/karma/node_modules/.bin/node-http-proxy
-node_modules/karma/node_modules/http-proxy/node_modules/utile/node_modules/.bin/mkdirp
-node_modules/karma/node_modules/http-proxy/node_modules/utile/node_modules/.bin/ncp
-node_modules/karma/node_modules/log4js/node_modules/.bin/semver
-node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_modules/.bin/uglifyjs
-node_modules/karma/node_modules/socket.io/node_modules/socket.io-client/node_modules/.bin/wscat
+node_modules/
+_book/
